lab 5: Assignment 3: Enrollment Entity with Many-to-Many Join