@@ -1,29 +1,23 @@
 package com.bootcamp.onlineschool;
 
 import com.bootcamp.onlineschool.model.Student;
-import java.util.*;
-import java.util.stream.Collectors;
+import com.bootcamp.onlineschool.repository.StudentRepository;
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
-/**
- * StudentRegistry class demonstrating:
- * - Collections (ArrayList, HashMap)
- * - Iteration (for-each, Iterator)
- * - Streams API
- * - Lambda expressions
- * - Sorting
- */
+import java.util.Comparator;
+import java.util.List;
+
+@Component
+@Transactional
 public class StudentRegistry {
-    private List<Student> students;
-    private Map<String, Student> studentMap;
-    
-    public StudentRegistry() {
-        this.students = new ArrayList<>();
-        this.studentMap = new HashMap<>();
+
+    private final StudentRepository studentRepository;
+
+    public StudentRegistry(StudentRepository studentRepository) {
+        this.studentRepository = studentRepository;
     }
-    
-    /**
-     * Add a student to the registry
-     */
+
     public void addStudent(Student student) {
         if (student == null) {
             throw new IllegalArgumentException("Student cannot be null");
@@ -31,101 +25,64 @@ public class StudentRegistry {
         if (!student.isValidEmail()) {
             throw new IllegalArgumentException("Invalid email format");
         }
-        students.add(student);
-        studentMap.put(student.getStudentId(), student);
+        if (student.getStudentId() != null
+                && studentRepository.existsByStudentId(student.getStudentId())) {
+            throw new IllegalArgumentException(
+                    "Student with id already exists: " + student.getStudentId());
+        }
+        studentRepository.save(student);
     }
-    
-    /**
-     * Remove a student by ID
-     */
+
     public boolean removeStudent(String studentId) {
-        Student student = studentMap.remove(studentId);
-        if (student != null) {
-            students.remove(student);
-            return true;
-        }
-        return false;
+        return studentRepository.findByStudentId(studentId)
+                .map(s -> {
+                    studentRepository.delete(s);
+                    return true;
+                })
+                .orElse(false);
     }
-    
-    /**
-     * Find a student by ID
-     */
+
+    @Transactional(readOnly = true)
     public Student findStudentById(String studentId) {
-        return studentMap.get(studentId);
+        return studentRepository.findByStudentId(studentId).orElse(null);
     }
-    
-    /**
-     * Find students by name (partial match)
-     */
+
+    @Transactional(readOnly = true)
     public List<Student> findStudentsByName(String name) {
-        return students.stream()
-                .filter(s -> s.getName().toLowerCase().contains(name.toLowerCase()))
-                .collect(Collectors.toList());
+        return studentRepository.findByNameContainingIgnoreCase(name);
     }
-    
-    /**
-     * Get all students sorted by name
-     */
+
+    @Transactional(readOnly = true)
     public List<Student> getAllStudentsSortedByName() {
-        return students.stream()
+        return studentRepository.findAll().stream()
                 .sorted(Comparator.comparing(Student::getName))
-                .collect(Collectors.toList());
+                .toList();
     }
-    
-    /**
-     * Get all students sorted by GPA (descending)
-     */
+
+    @Transactional(readOnly = true)
     public List<Student> getAllStudentsSortedByGpa() {
-        return students.stream()
+        return studentRepository.findAll().stream()
                 .sorted(Comparator.comparingDouble(Student::getGpa).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
-    
-    /**
-     * Get students with GPA above threshold
-     */
+
+    @Transactional(readOnly = true)
     public List<Student> getStudentsWithHighGpa(double threshold) {
-        return students.stream()
-                .filter(s -> s.getGpa() >= threshold)
-                .collect(Collectors.toList());
+        return studentRepository.findByGpaGreaterThanEqual(threshold);
     }
-    
-    /**
-     * Display all students
-     */
-    public void displayAllStudents() {
-        if (students.isEmpty()) {
-            System.out.println("No students in registry");
-            return;
-        }
-        students.forEach(System.out::println);
-    }
-    
-    /**
-     * Get total number of students
-     */
+
+    @Transactional(readOnly = true)
     public int getStudentCount() {
-        return students.size();
+        return (int) studentRepository.count();
     }
-    
-    /**
-     * Get average GPA
-     */
+
+    @Transactional(readOnly = true)
     public double getAverageGpa() {
-        if (students.isEmpty()) {
-            return 0.0;
-        }
-        return students.stream()
-                .mapToDouble(Student::getGpa)
-                .average()
-                .orElse(0.0);
+        Double avg = studentRepository.getAverageGpa();
+        return avg == null ? 0.0 : avg;
     }
-    
-    /**
-     * Clear all students
-     */
+
     public void clear() {
-        students.clear();
-        studentMap.clear();
+        studentRepository.deleteAll();
     }
 }
